fix date input display on ios

--- a/src/components/appSettings/ExchangeDateInput/ExchangeDateInput.scss
+++ b/src/components/appSettings/ExchangeDateInput/ExchangeDateInput.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/variables';
+@import '../../../styles/functions';
 
 .react-datepicker {
   background-color: $black;
@@ -7,8 +8,10 @@
 }
 
 .react-datepicker-wrapper input {
-  max-width: 9ch;
   outline: none;
+  @include breakpoint-up($desktop-breakpoint) {
+    max-width: 9ch;
+  }
 }
 
 .react-datepicker__current-month,
